--- a/index.html
+++ b/index.html
@@ -3,16 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-
+    <style>
+        .arc text {
+            font: 10px sans-serif;
+            text-anchor: middle;
+        }
+        .arc path {
+            stroke: #fff;
+        }
+    </style>
 </head>
 <body>
+
+
 <div class="dates">
     <form>Start Date:<input type="date" id="startdate" name="startdate" ></form>
     <form>End Date:<input type="date" id="enddate" name="enddate" ></form>
 </div>
+<svg width="200" height="200"></svg>
 <div class="expenses">Expenses!</div>
 
 </body>
-<script src="gnucashreports.js"></script>
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="expensestable.js"></script>
 </html>
