Chart works initially, won't update..

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <form>Start Date:<input type="date" id="startdate" name="startdate" ></form>
     <form>End Date:<input type="date" id="enddate" name="enddate" ></form>
 </div>
-<svg width="200" height="200"></svg>
+<!--<svg width="200" height="200"></svg>-->
+<div id="expenseschart"></div>
 <div class="expenses">Expenses!</div>
 
 </body>
