debt chart updates

--- a/debtnvd3.html
+++ b/debtnvd3.html
@@ -6,8 +6,15 @@
     <link href="nv.d3.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+<div class="dates">
+    <form>Start Date:<input type="date" id="startdate" name="startdate"></form>
+    <form>End Date:<input type="date" id="enddate" name="enddate"></form>
+</div>
 <div id="debtchart">
-    <svg style="height:900px; width:1700px;"></svg>
+    <svg style="height:900px; width:900px;"></svg>
+</div>
+<div id="debttable">
+
 </div>
 
 </body>
