stopping point before breaking everything with webpack and npm

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <div class="dates">
-    <form>Start Date:<input type="date" id="startdate" name="startdate"></form>
-    <form>End Date:<input type="date" id="enddate" name="enddate"></form>
+    <form>Start Date:<input type="date" id="expensesstartdate" name="expensesstartdate"></form>
+    <form>End Date:<input type="date" id="expensesenddate" name="expensesenddate"></form>
 </div>
 <div id="expenseschart">
     <svg style="height:700px; width: 600px;"></svg>
